--- a/AzureOpenAI - Mongo vCore - Ad Content Generation Demo.ipynb
+++ b/AzureOpenAI - Mongo vCore - Ad Content Generation Demo.ipynb
@@ -308,8 +308,8 @@
      "output_type": "stream",
      "text": [
       "api_type= azure\n",
-      "api_key= f2bbd63b6e52483ead0d34c0ddd2b0e4\n",
-      "endpoint= https://testingazureopenai.openai.azure.com/\n",
+      "api_key= XXXXXXXXXXXXXXXXXXXXXXXXXXXX\n",
+      "endpoint= XXXXXXXXXXXXXXXXXXXXXXXXXX\n",
       "version= 2024-02-01\n",
       "client= <openai.lib.azure.AzureOpenAI object at 0x0000014E47728D50>\n"
      ]
@@ -334,8 +334,8 @@
     "openai.api_version = config['openai_api_version']\n",
     "\n",
     "openai.api_type = \"azure\"\n",
-    "openai.api_key = \"f2bbd63b6e52483ead0d34c0ddd2b0e4\"\n",
-    "openai.api_base = \"https://testingazureopenai.openai.azure.com/\"\n",
+    "openai.api_key = \"XXXXXXXXXXXXXXXXXXXXXXXXX\"\n",
+    "openai.api_base = \"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX/\"\n",
     "openai.api_version = \"2024-02-01\"\n",
     "print(\"api_type=\",openai.api_type)\n",
     "print(\"api_key=\",openai.api_key)\n",
@@ -679,7 +679,7 @@
     "def Generate_ad_image(ad_topic):\n",
     "    daliClient = OpenAI(\n",
     "        #api_key=config['dali_api_key']\n",
-    "        api_key=\"sk-proj-XqAsikvIlIkYp6hi99rjT3BlbkFJGaeBBFPh4H0mIDqotFxX\"\n",
+    "        api_key=\"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\"\n",
     "    )\n",
     "\n",
     "    image_prompt = f'''\n",
