--- a/AzureOpenAI - Mongo vCore - Ad Content Generation Demo.ipynb
+++ b/AzureOpenAI - Mongo vCore - Ad Content Generation Demo.ipynb
@@ -679,7 +679,7 @@
     "def Generate_ad_image(ad_topic):\n",
     "    daliClient = OpenAI(\n",
     "        #api_key=config['dali_api_key']\n",
-    "        api_key=\"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\"\n",
+    "        #api_key=\"XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX\"\n",
     "    )\n",
     "\n",
     "    image_prompt = f'''\n",
